--- a/_ JAVA _ Homeworks/Bank_account lab week 3/.project
+++ b/_ JAVA _ Homeworks/Bank_account lab week 3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bank_account</name>
+	<name>Bank_account lab week 3</name>
 	<comment></comment>
 	<projects>
 	</projects>
